# npoint

./: 2_point_main.cpp  3_point_main.cpp  4_point_main.cpp  CMakeLists.txt  LICENSE.txt  README  angle_3pt_main.cpp  distributed_2pt_main.cpp  distributed_3pt_main.cpp  distributed_4pt_main.cpp  distributed_angle_2pt.cpp  distributed_angle_main.cpp  distributed_multi_matcher_main.cpp  multi_matcher_main.cpp  resampling_set_sizes.cpp  resampling_set_sizes.h
distributed/: CMakeLists.txt  arma_serialization.hpp  distributed_npt_driver.cpp  distributed_npt_driver.hpp  distributed_npt_driver_impl.hpp
efficient_kernels/: CMakeLists.txt  common.hpp  efficient_3pt_multi_kernel.hpp  kernel_2pt_cpu.cpp  kernel_2pt_cpu.hpp  kernel_4pt_cpu.cpp  kernel_4pt_cpu.hpp  kernels_npt_cpu.cpp  kernels_npt_cpu.cpp.kern0.hpp  kernels_npt_cpu.cpp.kern1.hpp  kernels_npt_cpu.cpp.kern2.hpp  kernels_npt_cpu.cpp.kern4.hpp  kernels_npt_cpu.cpp.kern5.hpp  kernels_npt_cpu.hpp  kernels_npt_cpu_old.hpp  timing.cpp  timing.hpp
infrastructure/: CMakeLists.txt  generate_random_problem.cpp  generate_random_problem.hpp  generic_npt_alg.hpp  generic_npt_alg_impl.hpp  node_tuple.cpp  node_tuple.hpp  pairwise_npt_traversal.hpp  pairwise_npt_traversal_impl.hpp  permutations.cpp  permutations.hpp  resampling_helper.cpp  resampling_helper.hpp
matchers/: 2_point_single_matcher.cpp  2_point_single_matcher.hpp  3_point_single_matcher.cpp  3_point_single_matcher.hpp  CMakeLists.txt  angle_matcher.cpp  angle_matcher.hpp  angle_matcher_generator.cpp  angle_matcher_generator.hpp  efficient_2pt_matcher.cpp  efficient_2pt_matcher.hpp  efficient_4pt_matcher.cpp  efficient_4pt_matcher.hpp  efficient_angle_matcher.cpp  efficient_angle_matcher.hpp  efficient_cpu_matcher.cpp  efficient_cpu_matcher.hpp  efficient_multi_matcher.cpp  efficient_multi_matcher.hpp  matcher_arguments.cpp  matcher_arguments.hpp  multi_matcher.cpp  multi_matcher.hpp  multi_matcher_generator.cpp  multi_matcher_generator.hpp  single_matcher.cpp  single_matcher.hpp  unordered_efficient_multi_matcher.cpp  unordered_efficient_multi_matcher.hpp  unordered_multi_matcher.cpp  unordered_multi_matcher.hpp
resampling_classes/: CMakeLists.txt  efficient_resampling_driver.hpp  efficient_resampling_driver_impl.hpp  naive_resampling_driver.hpp  naive_resampling_driver_impl.hpp  resampling_splitter.cpp  resampling_splitter.hpp
results/: CMakeLists.txt  angle_results.cpp  angle_results.hpp  multi_results.cpp  multi_results.hpp  single_results.cpp  single_results.hpp
tests/: CMakeLists.txt  distributed_angle_test.cpp  distributed_npoint_test.cpp  npoint_test_overall.cpp  test_angle_matcher.cpp  test_efficient_angle_matcher.cpp  test_efficient_matcher.cpp  test_multi_matcher.cpp  test_multi_thread_resampling.cpp  test_pairwise_traversal.cpp  test_parallel_traversal.cpp  test_resampling.cpp  test_single_matcher.cpp
tests/data/: test_angle_matcher.csv  test_data_1000.csv  test_data_200.csv  test_lower.csv  test_random_1000.csv  test_resampling_data_1.csv  test_resampling_data_2.csv  test_upper.csv
